--- a/AnimeVoiceApp/app/build.gradle
+++ b/AnimeVoiceApp/app/build.gradle
@@ -24,6 +24,7 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
-    implementation 'be.tarsos:dsp:2.4.4'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'be.tarsos:dsp:2.5'
 }
