--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,14 @@ jobs:
           arch: x86_64
           ndk: 25.2.9519653
 
+      # 🆕 Thêm bước tạo Gradle Wrapper nếu bị thiếu
+      - name: Generate Gradle Wrapper (if missing)
+        run: |
+          if [ ! -f gradlew ]; then
+            echo "gradlew not found → generating..."
+            gradle wrapper --gradle-version 8.7
+          fi
+
       - name: Grant execute permission for Gradlew
         run: chmod +x gradlew
 
